vpc.tf
resource "aws_vpc" "vpc" {
tags = {
Name = "myvpc1"
}
cidr_block = "10.0.0.0/16"
instance_tenancy = "default"
enable_dns_hostnames = "true"
}
